--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,9 @@
 	border: 2px solid #6c6;
 	box-shadow: 1px 2px 1px #6c6;
 }
+.breakP {
+	color: #393 !important;
+}
 
 input, p, #grade {
 	display: inline-block;
