--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
 * {
 	text-align: center;
 }
-
+body {
+	background: #fff url("teacher.svg") no-repeat fixed center;
+	padding: 20px;
+}
 /* inputs */
 .score, .total, .weight{
 	width: 100px !important;
@@ -18,6 +21,8 @@
 	border: 2px solid #999;
 	border-radius: 6px;
 	box-shadow: 1px 1px 0px #999;
+	background: rgba(255,255,255,0.8);
+	position: relative;
 }
 .gradeItem:hover {
 	border: 2px solid #6c6;
@@ -25,6 +30,7 @@
 }
 .breakP {
 	color: #393 !important;
+	font-size: 250%;
 }
 
 input, p, #grade {
@@ -81,4 +87,27 @@ input[type="color"]:focus,
   border-color: #6c6;
   box-shadow: 0 0 8px #6c6;
 
+}
+
+.delete-button {
+	position: absolute;
+	top: 0px !important;
+	right: 0px !important;
+}
+
+@media screen and (max-width: 768px) {
+	.alert {
+		visibility: hidden;
+		clear: both;
+		display: none;
+	}
+	body {
+		background: #fff;
+	}
+	.gradeLabel {
+		display: block;
+	}
+	.breakP {
+		display: none !important;
+	}
 }
