code cleaning part 1

--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,9 @@ input[type="color"]:focus,
 	.gradeLabel {
 		display: block;
 	}
+	input[type=text], input[type=number] {
+		display: inline;
+	}
 	.breakP {
 		display: none !important;
 	}
