--- a/night.css
+++ b/night.css
@@ -6,3 +6,6 @@ textarea {
 	background-color: rgba(0,0,0,0) !important;
 	color: #fff !important;
 }
+.gradeItem {
+	background: rgba(51,51,51,0.8) !important;
+}
