--- a/night.css
+++ b/night.css
@@ -6,6 +6,15 @@ textarea {
 	background-color: rgba(0,0,0,0) !important;
 	color: #fff !important;
 }
-.gradeItem {
+.alert, .gradeItem {
 	background: rgba(51,51,51,0.8) !important;
+}
+
+/* alert */
+.alert {
+	color: #fff !important;
+}
+kbd {
+	background-color: #fff !important;
+	color: #000 !important;
 }
