add more images

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 	text-align: center;
 }
 body {
-	background: #fff url("../img/teacher.svg") no-repeat fixed center;
+	background: #fff url("../img/teacher-light.svg") no-repeat fixed center;
 	padding: 20px;
 }
 /* inputs */
