--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 body {
 	background: #fff url("../img/teacher-light.svg") no-repeat fixed center;
 	padding: 20px;
+	padding-top: 0px;
 }
 /* inputs */
 .score, .total, .weight {
@@ -20,6 +21,9 @@ body {
 
 .alert, .gradeItem {
 	background-color: rgba(255,255,255,0.8);
+}
+.alert {
+	margin: 0;
 }
 
 /* grade divs */
