--- a/css/night.css
+++ b/css/night.css
@@ -2,23 +2,23 @@ html, body {
 	background-color: #333 !important;
 	color: #fff !important;
 }
+.card-body {
+	background-color: transparent !important;
+}
 textarea {
-	background-color: rgba(0,0,0,0) !important;
+	background-color: transparent !important;
 	color: #fff !important;
 }
-.alert, .grade-item {
+.grade-item {
 	background: rgba(51,51,51,0.8) !important;
 }
-
-/* alert */
-.alert {
-	color: #fff !important;
-}
 kbd {
-	background-color: #fff !important;
-	color: #000 !important;
+	/*background-color: #fff !important;*/
+	/*color: #000 !important;*/
 }
-
+.modal-content {
+	background-color: #000 !important;
+}
 .popover {
 	color: #000;
 }
