--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,12 @@ input {
 	border-radius: 0.5rem;
 }
 
+#grade-result-div {
+	background-color: rgba(255,255,255,0.8);
+	border: 2px solid #ccc;
+	margin: 0.5rem;
+	padding: 0.5rem;
+}
 
 input, #grade-text {
 	display: inline-block;
